  * a Vidnik window
  * the Vidnik icon in the Finder or the Dock.
  Answer: this is essentually a drag&drop or paste: if on App icon, then if the movie is associated with any open window, open that window and select it.
  * if not in any window, add it to end of front window and select it.
  * if no open window, try to reopen previous document. 
  * if that fails, bring up new untitled document.
  * Fixed typo that broke recording (path to save recording files wasn't correct)
  * Added a build phase to delete the neccessary localizations in Sparkle. .zip shrinks: 1.1M -> 0.6M !
  * fixed some bugs dragging items around in the table of segments.
  * While adding regrssion tests to the unit test suite to try and test the above dragging code, I discovered, 
  * fixed bugs in the objectSpecifier code for appleScript handling.
  * wrote additional appleScript unit tests.
  * laid the groundwork for a preprocessing movie step, to re-write with no edit list before uploading.
  * improved online help
  * Debug menu, controlled by NSDebug environment variable in the DEBUG version that will let me integrate in
    the checks: need to rewrite, rewrite.

TODO:
- indicator that movie is bigger than [TDConfig() maxMovieSize] or [TDConfig() maxMovieDuration].
- indicator that movie has consumed into [TDConfig() diskCushion] space.
- that a movie has been uploaded.
- better mnames for movies on disk.

- menu commands split, join.
- an upload is not a save. better undo handling of trim across upload.
- deleting a movie should move the actual movie file to the trash. undo should move it back.
- check movie status before querying attributes. 
  if not ready, schedule to recheck when becomes ready?
- ModelMovie error state policy
- Not clear that you are recording.
- Not clear when we finish queuing versus when upload is done.

- playlist management: a playlist is a list of movies.
  - can't cut video segments.
  - splitting movies 
  - joining movies